<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/LLPHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/llp_join_our_community"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBodyBold1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/llp_verify_email"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/llp_verification_email_sent_instructions"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/llp_required_field_indicator"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBodyBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/llp_email_address_verification_required"
            />

        <com.aom_ai.uc_component.view.LLPTextInput
            android:id="@+id/input_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:textInputHint="@string/llp_verification_code"
            app:textInputType="text"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Secondary"
            android:id="@+id/button_resend_verification_code"
            android:layout_marginTop="32dp"
            android:text="@string/llp_resend_verification_code"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                style="@style/LLPButton.Secondary"
                android:id="@+id/button_previous"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/llp_previous"
                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/LLPButton.Primary"
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/llp_next"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>