<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/LLPHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/llp_join_our_community"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/llp_aom_ai_description"
            />

        <CheckBox
            android:id="@+id/checkbox_age_over_18"
            style="@style/LLPCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:paddingStart="10dp"
            android:text="@string/llp_confirmation_age_over_18"/>

        <CheckBox
            android:id="@+id/checkbox_work_eligibility_thailand"
            style="@style/LLPCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingStart="10dp"
            android:text="@string/llp_confirmation_work_eligibility_thailand"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Primary"
            android:id="@+id/button_next"
            android:layout_marginTop="42dp"
            android:text="@string/llp_next"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBodyBold2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/llp_already_a_member"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Secondary"
            android:id="@+id/button_sign_in"
            android:layout_marginTop="16dp"
            android:text="@string/llp_sign_in"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>