<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/LLPHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/llp_reset_my_password"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/llp_prompt_enter_email_for_account"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/llp_required_field_indicator"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBodyBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/llp_email_address_required"
            />

        <com.aom_ai.uc_component.view.LLPTextInput
            android:id="@+id/input_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:textInputHint="@string/llp_email_address"
            app:textInputType="textEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Primary"
            android:id="@+id/button_next"
            android:layout_marginTop="32dp"
            android:text="@string/llp_next"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>