<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/LLPHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/llp_join_our_community"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/llp_join_options_description"
            />

        <CheckBox
            android:id="@+id/checkbox_accept_terms_and_privacy"
            style="@style/LLPCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:paddingStart="10dp"
            android:text="@string/llp_accept_terms_and_privacy"/>

        <FrameLayout
            android:id="@+id/fl_google_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:paddingVertical="13dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/llp_bg_sso_button"
            >

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LLPSSOButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/llp_ic_google"
                android:drawablePadding="12dp"
                android:layout_gravity="center"
                android:text="@string/llp_join_with_google"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_facebook_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:paddingVertical="13dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/llp_bg_sso_button"
            >

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LLPSSOButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/llp_ic_facebook"
                android:drawablePadding="12dp"
                android:layout_gravity="center"
                android:text="@string/llp_join_with_facebook"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_line_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:paddingVertical="13dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/llp_bg_sso_button"
            >

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LLPSSOButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/llp_ic_line"
                android:drawablePadding="12dp"
                android:layout_gravity="center"
                android:text="@string/llp_join_with_line"
                />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Primary"
            android:id="@+id/button_join_with_email"
            android:layout_marginTop="16dp"
            android:text="@string/llp_join_with_email"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LLPBodyBold2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/llp_already_a_member"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LLPButton.Secondary"
            android:id="@+id/button_sign_in"
            android:layout_marginTop="16dp"
            android:text="@string/llp_sign_in"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>